martian-derive/tests/ui_make_mro/attr_unknown_attr.stderr
error: Expecting a comma separated `key=value` like tokens here. The allowed keys are: [mem_gb , threads , vmem_gb , volatile , stage_name]
 --> $DIR/attr_unknown_attr.rs:7:12
  |
7 | #[make_mro(foo)]
  |            ^^^
